--- a/src/page/auth/Auth.css
+++ b/src/page/auth/Auth.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -13,7 +13,7 @@ body {
   background-color: rgb(226, 226, 226);
 }
 
-main {
+.card-login {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -22,18 +22,24 @@ main {
   box-shadow: -2px 0px 28px -4px rgba(107, 107, 107, 0.77);
   -webkit-box-shadow: -2px 0px 28px -4px rgba(107, 107, 107, 0.77);
   -moz-box-shadow: -2px 0px 28px -4px rgba(107, 107, 107, 0.77);
+  height: 500px;
 }
 
 .title-section {
   background-color: rgb(255, 205, 43);
-  padding: 150px 60px;
   border-radius: 20px;
+  height: 100%;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  flex-direction: column;
+  padding: 30px;
 }
 
 .title-section h1 {
   font-size: 70px;
-  margin-right: 70px;
   margin-bottom: 25px;
+  margin-right: 70px;
 }
 
 .title-section h2 {
@@ -45,26 +51,9 @@ main {
 }
 
 .button-section {
-  padding: 10px 100px;
+  padding: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-}
-
-.button-section p {
-  font-size: 15px;
-  font-weight: 600;
-  margin-bottom: 20px;
-  margin-top: 20px;
-}
-
-button {
-  padding: 15px;
-  border: none;
-  background-color: rgb(255, 205, 43);
-  border-radius: 10px;
-  width: 100%;
-  margin-bottom: 30px;
-  font-weight: 500;
-}
+} */
